[package]
name = "hexen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.19.3"}
winit = "0.29.15"
bytemuck = "1.15.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
